--- a/latex/headerMIslides.tex
+++ b/latex/headerMIslides.tex
@@ -28,6 +28,27 @@
 \tikzset{myrect/.style={rectangle, fill=#1!20, draw=#1!75, text=black}}
 \tikzstyle{axes}=[]
 
+% sticky note
+\usepackage{xparse}
+\usetikzlibrary{shadows}
+\definecolor{myyellow}{RGB}{242,226,149}
+\NewDocumentCommand\StickyNote{O{6cm}mO{6cm}}{%
+\begin{tikzpicture}
+\node[
+drop shadow={
+  shadow xshift=2pt,
+  shadow yshift=-4pt
+},
+inner xsep=7pt,
+fill=myyellow,
+xslant=0.05,
+yslant=-0.05,
+inner ysep=10pt
+]
+{\parbox[t][#1][c]{#3}{#2}};
+\end{tikzpicture}%
+}
+
 % from tex.stackexchange useful to align substacks
 
 \makeatletter
