--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -135,23 +135,25 @@ Solve the eigenvalue problem:
 
 Each eigenvector $\vec e_i$ with corresponding $\lambda_i \ne 0$ lies in the span of 
 \begin{equation}
-\left\{
+\big\{
 \vec{\phi}_{(\vec{x}^{(\alpha)})}
-\right\}_{\alpha=1}^{p}.
+\big\}_{\alpha=1}^{p}. \qquad \big(\vec{\phi}_{(\vec{x}^{(\alpha)})} = \vec{\phi}^{(\alpha)} \text{ for brevity}\big)
 \end{equation}
 
 \pause
 
 Consequently, there exists a set of coefficients (i.e. a coefficient for each transformed observation)
 \begin{equation}
-\left\{
+\big\{
 a^{(\alpha)}
-\right\}_{\alpha=1}^{p}\,,
+\big\}_{\alpha=1}^{p}\,,
 \end{equation} which satisfies the following:
 
 \begin{equation}
 \label{eq:ephi}
-\vec e = \sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})}
+\vec e = \sum^{p}_{\beta=1} a^{(\beta)} 
+%\vec{\phi}_{(\vec{x}^{(\beta)})}
+\vec{\phi}^{(\alpha)}
 \end{equation}
 
 \notesonly{
@@ -164,20 +166,21 @@ Eq.\ref{eq:ephi} tells us that we can describe $\vec e$ in terms of the transfor
 \begin{frame}{\subsubsecname}
 
 \slidesonly{
-	\begin{textblock}{5}(11,0.6)
-	\textblockcolour{lightgray}
+\vspace{-12mm}
+\hspace{7.8cm}
+\StickyNote[1.7cm]{
 	\begingroup
 	\footnotesize
 	\begin{equation} \label{eq:cov}
-		\vec C_{\phi} = \frac{1}{p} \sum_{\alpha=1}^{p} \vec{\phi}_{(\vec{x}^{(\alpha)})} \vec{\phi}^{\top}_{(\vec{x}^{(\alpha)})}
+		\vec C_{\phi} = \frac{1}{p} \sum_{\alpha=1}^{p} \vec{\phi}^{(\alpha)} \big(\vec{\phi}^{(\alpha)}\big)^\top
 	\end{equation}
-
 	\begin{equation}
 	\label{eq:ephi}
-		\vec e = \sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})}
+		\vec e = \sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}^{(\beta)}
 	\end{equation}
 	\endgroup
-	\end{textblock}
+}[3.5cm]
+\vspace{-22mm}
 }
 
 \notesonly{
@@ -193,12 +196,13 @@ Express the eigenvalue problem in terms of $\phi$'s:
 }
 
 \begin{equation}
-\underbrace{\frac{1}{p} \sum_{\alpha=1}^{p} \vec{\phi}_{(\vec{x}^{(\alpha)})} \vec{\phi}^{\top}_{(\vec{x}^{(\alpha)})} 
+\underbrace{\frac{1}{p} \sum_{\alpha=1}^{p} \vec{\phi}^{(\alpha)} \big(\vec{\phi}^{(\alpha)}\big)^\top 
+\vphantom{\sum^{p}_{\beta=1}}
 }_{=\,\vec C_{\phi}}
  \, 
-\underbrace{\sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})}}_{=\,\vec e}
+\underbrace{\sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}^{(\beta)}}_{=\,\vec e}
  = \lambda \;\,
-\underbrace{\sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})}}_{=\,\vec e}
+\underbrace{\sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}^{(\beta)}}_{=\,\vec e}
 \end{equation}
 
 \pause
@@ -206,12 +210,12 @@ Express the eigenvalue problem in terms of $\phi$'s:
 After rearranging the terms we get:
 \begin{equation} \label{eq:eig2}
 \frac{1}{p} \sum_{\alpha=1}^{p} \sum^{p}_{\beta=1} 
-a^{(\beta)} \vec{\phi}_{(\vec{x}^{(\alpha)})}
+a^{(\beta)} \vec{\phi}^{(\alpha)}
 \underbrace{
- \vec{\phi}^{\top}_{(\vec{x}^{(\alpha)})} \,  \vec{\phi}_{(\vec{x}^{(\beta)})}
+ \big(\vec{\phi}^{(\alpha)}\big)^\top  \,  \vec{\phi}^{(\beta)}
 }_{\substack{\text{scalar product}\\ = K_{\alpha\beta}}}
  = \lambda 
-\sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})}
+\sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}^{(\beta)}
 \end{equation}
 
 We are one step closer to not needing the eplxicit mapping $\phi$.
@@ -221,20 +225,21 @@ We are one step closer to not needing the eplxicit mapping $\phi$.
 \begin{frame}{\subsubsecname}
 
 \slidesonly{
-	\begin{textblock}{5}(11,0.6)
-	\textblockcolour{lightgray}
+\vspace{-12mm}
+\hspace{7.8cm}
+\StickyNote[1.7cm]{
 	\begingroup
 	\footnotesize
 	\begin{equation} \label{eq:cov}
-		\vec C_{\phi} = \frac{1}{p} \sum_{\alpha=1}^{p} \vec{\phi}_{(\vec{x}^{(\alpha)})} \vec{\phi}^{\top}_{(\vec{x}^{(\alpha)})}
+		\vec C_{\phi} = \frac{1}{p} \sum_{\alpha=1}^{p} \vec{\phi}^{(\alpha)} \big(\vec{\phi}^{(\alpha)}\big)^\top
 	\end{equation}
-
 	\begin{equation}
 	\label{eq:ephi}
-		\vec e = \sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})}
+		\vec e = \sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}^{(\beta)}
 	\end{equation}
 	\endgroup
-	\end{textblock}
+}[3.5cm]
+\vspace{-22mm}
 }
 
 \notesonly{
@@ -251,33 +256,36 @@ Eq.\ref{eq:eig2} becomes:}
 \begin{equation} \label{eq:eig3}
 \frac{1}{p} \sum_{\alpha=1}^{p} \sum^{p}_{\beta=1} 
 a^{(\beta)}
-\vec{\phi}_{(\vec{x}^{(\alpha)})} K_{\alpha \beta}
- = \lambda 
-\sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})}
+\vec{\phi}^{(\alpha)}
+K_{\alpha \beta}
+= \lambda 
+\sum^{p}_{\beta=1} a^{(\beta)} \vec{\phi}^{(\beta)}
 \slidesonly{\hspace{40mm}}
 \end{equation}
 
-We will now proceed with reformulating the above until we no longer have any $\phi$'s.
+We now proceed with reformulating the above until we no longer have any $\phi$'s:
 
 \pause
 
-We left-multiply\notesonly{ Eq.\ref{eq:eig3}} with $\left(\vec \phi^{(\gamma)}\right)^\top$, where $\gamma = 1, \ldots, p$.
- We can pull $\left(\vec \phi^{(\gamma)}\right)^\top$ directly into the sum on the \slidesonly{LHS}\notesonly{left-hand-side} and the sum on the \slidesonly{RHS}\notesonly{right-hand-side}:
+\notesonly{We }left-multiply\notesonly{ Eq.\ref{eq:eig3}} with $\big(\vec \phi_{(\vec x^{(\gamma)}}\big)^\top$, where $\gamma = 1, \ldots, p$.
+ We can pull $\big(\vec \phi^{(\gamma)}\big)^\top$ directly into the sum on the \slidesonly{LHS}\notesonly{left-hand-side} and the sum on the \slidesonly{RHS}\notesonly{right-hand-side}:
 
+\only<2,3>{
 \begin{equation} \label{eq:eig4}
 \frac{1}{p} \sum_{\alpha=1}^{p} \sum^{p}_{\beta=1} 
 a^{(\beta)}
 \underbrace{
 \left(\vec \phi^{(\gamma)}\right)^\top
-\vec{\phi}_{(\vec{x}^{(\alpha)})} 
+\vec{\phi}^{(\alpha)}
 }_{=K_{\gamma \alpha}}
 K_{\alpha \beta}
  = \lambda 
 \sum^{p}_{\beta=1} a^{(\beta)} 
 \underbrace{
-\left(\vec \phi^{(\gamma)}\right)^\top \vec{\phi}_{(\vec{x}^{(\beta)})}
+\left(\vec \phi^{(\gamma)}\right)^\top \vec{\phi}^{(\beta)}
 }_{=K_{\gamma \beta}}
 \end{equation}
+}
 
 \pause
 
@@ -292,90 +300,306 @@ K_{\gamma \alpha}
 K_{\alpha \beta}
  = \lambda 
 \sum^{p}_{\beta=1} a^{(\beta)} 
-K_{\gamma \beta} \quad \forall \gamma
+K_{\gamma \beta} \quad {\only<4>{\color{red}}\forall \gamma}
 \end{equation}
 
+\slidesonly{
+\only<4>{
+Use matrix notation to reduce the clutter.
+}
+}
 
 
 
 \end{frame}
 
-\begin{enumerate}
-\item 
+\begin{frame}
 
-\item 
+\slidesonly{
+\begin{equation} \label{eq:eigK}
+\frac{1}{p} \sum_{\alpha=1}^{p} \sum^{p}_{\beta=1} 
+a^{(\beta)}
+K_{\gamma \alpha}
+K_{\alpha \beta}
+ = \lambda 
+\sum^{p}_{\beta=1} a^{(\beta)} 
+K_{\gamma \beta} \quad {\color{red}\forall \gamma}
+\end{equation}
+}
 
-\item 
-
-
-
-
-
-
-
-
-
-Since we want to compute this for all training samples $\gamma$, 
-we can reduce the clutter even more by using matrix notation. 
-Specifically, by using the \emph{kernel matrix} $\vec K=\{K_{\alpha\beta}\}$, where \\
-$
+We want to solve \notesonly{\eqref{eq:eq:eigK}}\slidesonly{the above} \textbf{for all} training samples $\gamma$.
+We can further reduce the clutter by using matrix notation.\\ 
+Specifically, by computing the \emph{kernel matrix} $\vec K=\{K_{\alpha\beta}\}$, where \\
+\begin{equation}
 K_{\alpha \beta} = 
 k(\vec x^{(\alpha)}, \vec x^{(\beta)}) = 
-\vec{\phi}_{(\vec{x}^{(\alpha)})}^\top 
-		\vec{\phi}_{(\vec{x}^{(\beta)})}
-$ 
+\big(\vec{\phi}^{(\alpha)}\big)^\top 
+		\vec{\phi}^{(\beta)}
+\end{equation}
 
 We end up with this formulation of the eigenvalue problem:
 
-\begin{equation*}
-	\vec{K}^2 \vec{a} = p \lambda \vec{K} \mspace{2mu} \vec{a}
-\end{equation*}
+\begin{align}
+	\frac{1}{p} \vec{K}^2 \vec{a} = \lambda \vec{K} \, \vec{a}\\
+	\vec{K}^2 \vec{a} = p \lambda \vec{K} \, \vec{a}
+\end{align}
+
+
+\end{frame}
+
+\begin{frame}{Side-note: Arriving at the matrx notation}
+
+\notesonly{Side note: Going from \eqref{eq:eigK} to the matrix notation:\\}
+
+\slidesonly{
+
+\svspace{-3mm}
+
+\begingroup
+\footnotesize
+\begin{equation} \label{eq:eigK}
+\frac{1}{p} \sum_{\alpha=1}^{p} \sum^{p}_{\beta=1} 
+a^{(\beta)}
+K_{\gamma \alpha}
+K_{\alpha \beta}
+ = \lambda 
+ \sum^{p}_{\beta=1} a^{(\beta)} 
+K_{{\gamma} \beta} \quad {\forall \gamma}
+\end{equation}
+\endgroup
+
+\svspace{-1mm}
+}
+
+First, we look at the RHS\notesonly{ of \eqref{eq:eigK}}:
+
+\svspace{-5mm}
+
+\begin{equation}
+ \ldots = \lambda 
+ \sum^{{\color{blue}p}}_{\color{blue}\beta=1} a^{({\color{blue}\beta})} 
+K_{{\color{red}\gamma} {\color{blue}\beta}} \quad {\color{red}\forall \gamma}
+\end{equation}
+
+\begin{itemize}
+\item ${\color{red}\gamma}$ corresponds to a specific row in the Kernel matrix $\vec K$.
+\item Let $\vec a$ be a vector that stores the values $a^{({\color{blue}\beta})}$, ${\color{blue}\beta=1,\ldots,p}$.
+\item ${\color{blue}\beta}$ iterates over the elements in the vector $\vec a$ and columns in $\vec K$.
+\item If we switch terms to:
+\svspace{-3mm}
+\begin{equation}
+ \ldots = \lambda 
+ \sum^{{\color{blue}p}}_{\color{blue}\beta=1}  
+K_{{\color{red}\gamma} {\color{blue}\beta}} \, a^{({\color{blue}\beta})} \quad {\color{red}\forall \gamma}
+\label{eq:rearrangerhs}
+\end{equation}
+
+\notesonly{We see that the }RHS is essentially the inner product of the $\gamma$-th row with $\vec a$.
+Recall that we're doing this ${\color{red}\forall \gamma}$ (i.e. all rows). Therefore RHS $\Rightarrow \lambda \vec K \, \vec a$ (a vector). 
+
+
+\end{itemize}
+
+\end{frame}
+
+\definecolor{darkgreen}{rgb}{0,0.6,0}
+
+\begin{frame}{Side-note: Arriving at the matrx notation - LHS}
+
+Next, we look at the LHS\notesonly{ of \eqref{eq:eigK}}:
+
+\svspace{-3mm}
+
+\begin{equation}
+ \frac{1}{p} \sum_{{\color{darkgreen}\alpha=1}}^{p} \sum^{p}_{{\color{blue}\beta=1}} 
+a^{({\color{blue}\beta})}
+K_{{\color{red}\gamma} {\color{darkgreen}\alpha}}
+K_{{\color{darkgreen}\alpha} {\color{blue}\beta}} = \ldots
+ \quad {\color{red}\forall \gamma}
+\end{equation}
+
+\svspace{-1mm}
+
+\begin{itemize}
+\item Same as before:
+\begin{itemize}
+\item ${\color{red}\gamma}$ corresponds to a specific row in the Kernel matrix $\vec K$.
+\item Let $\vec a$ be a vector that stores the values $a^{({\color{blue}\beta})}$, ${\color{blue}\beta=1,\ldots,p}$.
+\item ${\color{blue}\beta}$ iterates over the elements in the vector $\vec a$ and columns in $\vec K$.
+\end{itemize}
+\item ${\color{darkgreen}\alpha}$ iterates over the columns in $\vec K$.
+\item $K_{{\color{red}\gamma} {\color{darkgreen}\alpha}}$ doesn't change with ${\color{blue}\beta}$, so we can move it out of the inner sum:
+\svspace{-3mm}
+\begin{align}
+ \frac{1}{p} \sum_{{\color{darkgreen}\alpha=1}}^{p} 
+ K_{{\color{red}\gamma} {\color{darkgreen}\alpha}}
+ \underbrace{
+\sum^{p}_{{\color{blue}\beta=1}} 
+a^{({\color{blue}\beta})}
+K_{{\color{darkgreen}\alpha} {\color{blue}\beta}}}_{\circledast} = \ldots
+ \quad {\color{red}\forall \gamma}
+\end{align}
+\item $\circledast$ is the inner-product of the ${\color{darkgreen}\alpha}$-th row and $\vec a$.
+\item LHS is essentially the inner product of the $\gamma$-th row with the \underline{vector} $\circledast$.
+\item Recall ${\color{red}\forall \gamma}$. Therefore LHS $\Rightarrow \vec K \, \vec K \, \vec a = \vec K^2 \vec a$. \notesonly{$\vec K$ is a symmetric matrix} 
+
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}{Back to the eigenvalue problem}
+
+\notesonly{Back to the eigenvalue problem:\\}
+
+\slidesonly{
+\begin{align}
+	\vec{K}^2 \vec{a} = p \lambda \vec{K} \, \vec{a}
+\end{align}
+}
+
+\pause
 
 $\vec K$ appears on both sides. All the solutions that are of interest remain represented in 
 the following simpler eigenvalue problem, which we refer to as the \emph{transformed eigenvalue problem}:
 \begin{equation}
 \label{eq:eigsimple1}
-	\vec{K} \, \vec{a} = p \lambda \mspace{2mu} \vec{a}
+	\vec{K} \, \vec{a} = p \lambda \vec{a}
 \end{equation}
+
+\pause
 
 We can interpret $\vec a$ as the \emph{eigenvector} of $\vec K$
 
-By omitting the constant $p$, we can rely on finding solutions for $\lambda$ that absorb it:
+\pause
+
+\question{Do we really need $p$ in the transformed eigenvalue problem?}
+
+\pause
+
+No, by omitting the constant $p$ (optional), we can rely on finding solutions for $\lambda$ that absorb it:
 
 \begin{equation}
 \label{eq:eigsimple2}
-	\vec{K} \, \vec{a} = \lambda \mspace{2mu} \vec{a}
+	\vec{K} \, \vec{a} = \lambda \vec{a}
 \end{equation}
+
+\end{frame}
+
+\begin{frame}
+
+\question{What was all this about?}
 
 All we've been doing so far is reformulate the eigenvalue problem such that we end up 
 with a formulation that only contains terms of the inner product kernel.\\
-Why was all this necesary? Because (1) we want to enable PCA to find non-linear correlations and (2) we don't have access to $\vec \phi_{(\vec x)}$.
+
+\pause
+
+\slidesonly{
+\begin{minipage}{0.45\textwidth}
+	\begin{center}
+		\includegraphics[width=3cm]{img/meme_necessary}
+    \end{center}
+\end{minipage}
+\pause
+\begin{minipage}{0.45\textwidth}
+	\begin{center}
+		\includegraphics[width=4cm]{img/meme_ofcourse2}
+    \end{center}
+\end{minipage}
+}
+
+\notesonly{
+\question{Was all this necessary?}
+
+Yes, }because
+
+\begin{enumerate}
+\item we want to enable PCA to find non-linear correlations and
+\item we don't have access to $\vec \phi_{(\vec x)}$.
+\end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+
+\slidesonly{
+\begin{center}
+		\includegraphics[width=6cm]{img/meme_nowwhat}
+\end{center}
+}
+
+\pause
 
 Now that we've solved the eigenvalue problem, we continue with the remaining steps for PCA.
 
-\newpage 
-\item Normalize the eigenvectors:
+\pause
 
-Before we can project anything onto the space spanned by the PCs $\widetilde{\vec a}_k$ where $k=1,\ldots,p$,
-we need to ensure these vectors are normalized. 
-$\widetilde {\vec a}_k$ is only used to indicate that the vector has not been normalized yet.
 
-%$\widetilde {\vec a}_k$ can be normalized explicitly by:
-%$$
-%\vec a_k^{norm.} = \frac{1}{||\widetilde{\vec a}_k||} \cdot \widetilde{\vec a}_k = 
-%\frac{1}{\sqrt{\left(\widetilde{\vec a}_k\right)^\top \widetilde{\vec a}_k}} \cdot \widetilde{\vec a}_k
-%$$
+\slidesonly{
+\begin{center}
+		\includegraphics[width=2cm]{img/meme_right}
+\end{center}
+}
 
-%However, we want to demonstrate how to normalize $\widetilde {\vec a}_k$ in a way that can be more efficient than an explicit normalization.
+\end{frame}
 
-Recalling Eq.\ref{eq:ephi} (we add the index $k$ to denote which eigenvector):
+\subsubsection{Normalize the eigenvectors}
+
+\begin{frame}{\subsecname}
+
+Before we can project anything onto the space spanned by the PCs, we need to know they are normalized first.
+
+In linear PCA, we've relied on \textit{Eig} giving us normalized eigenvectors $\vec e$. 
+
+\question{If we feed it with the kernel matrix will we get normalized $\vec a$?}
+
+\pause
+
+- Yes, Eig() gives us \underline{unit} vectors regardless.
+
+\pause
+
+\question{So, are we done talking about normalization?}
+
+\pause
+
+-No, because it's the $\vec e$'s that PCA needs normalized.
+
+\end{frame}
+
+\begin{frame}{\subsubsecname}
+
+Recall, that PCA solves the eigenvalue problem
+
+\begin{equation} 
+%\label{eq:cov}
+\vec C_{\phi} = \frac{1}{p} \sum_{\alpha=1}^{p} \vec{\phi}_{(\vec{x}^{(\alpha)})} \vec{\phi}^{\top}_{(\vec{x}^{(\alpha)})}
+\end{equation}
+
+At the solution, $\vec e^\top \vec e = 1$. $\vec e$ are normalized eigenvectors to use as PCs.
+
+We don't have the $\phi$'s so we opted to solve the transformed eigenvalue problem instead:
+
+\begin{equation}
+%\label{eq:eigsimple1}
+	\vec{K} \, \vec{a} = p \lambda \vec{a}
+\end{equation}
+
+At the solution, $\widetilde{\vec a}^\top \widetilde{\vec a} = 1 \quad \nRightarrow \quad \vec e^\top \vec e \ne 1$\\
+
+\notesonly{Now that we are aware that we need further normalization, }we'll use $\widetilde{\vec a}_k$ where $k=1,\ldots,p$ to denote the \textbf{un}normalized eigenvectors from the transformed eigenvalue problem and $\vec a_k$ to denote that the vector has been normalized to use to correctly project onto the corresponding PC.
+
+\end{frame}
+
+\begin{frame}{\subsubsecname}
+
+Recall\notesonly{ing Eq.\ref{eq:ephi} (we add the index $k$ to denote which eigenvector):}
 \begin{equation}
 \label{eq:ephik}
 \vec e_k = \sum^{p}_{\beta=1} a_k^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})},
 \end{equation}
 
-Again, we try to reformulate things such that we end up with the inner-product kernel rather than $\phi$. 
-We left-multiply Eq.\ref{eq:ephik} with $\left(\vec e_k\right)^\top$:
+We want an expression for the norm $\vec e^{\top}_k \vec e_k$ that does not involve $\phi$'s. We left-multiply\slidesonly{ the above}\notesonly{ Eq.\ref{eq:ephik}} with $\left(\vec e_k\right)^\top$:
 \begin{align}
 \vec e^{\top}_k \vec e_k &= \sum^{p}_{\alpha=1}  a_k^{(\alpha)} \vec{\phi}_{(\vec{x}^{(\alpha)})}^\top \sum^{p}_{\beta=1} a_k^{(\beta)} \vec{\phi}_{(\vec{x}^{(\beta)})} \\
 &= \sum^{p}_{\alpha=1}  \sum^{p}_{\beta=1}  a_k^{(\beta)}  \underbrace{\vec{\phi}_{(\vec{x}^{(\alpha)})}^\top  \vec{\phi}_{(\vec{x}^{(\beta)})}} a_k^{(\alpha)} \\
@@ -383,7 +607,16 @@ We left-multiply Eq.\ref{eq:ephik} with $\left(\vec e_k\right)^\top$:
 &= \widetilde {\vec a}_k^\top \vec K \, \widetilde {\vec a}_k
 \end{align}
 
+\end{frame}
+
+\begin{frame}{\subsubsecname}
+
+\notesonly{
 And when we plug Eq.\ref{eq:eigsimple1} into the above:
+}
+\slidesonly{
+From $\vec{K} \, \widetilde {\vec a}_k = p \lambda \widetilde {\vec a}_k$ follows:
+}
 
 \begin{equation}
 \label{eq:eignorm}
@@ -393,13 +626,31 @@ And when we plug Eq.\ref{eq:eigsimple1} into the above:
 = p \lambda_k \, \widetilde {\vec a}_k^\top \widetilde {\vec a}_k  \eqexcl 1
 \end{equation}
 
+\pause
+
+w.l.o.g.
+
+\svspace{-7mm}
+
+\begin{equation}
+\widetilde {\vec a}_k^\top \widetilde {\vec a}_k = 1
+\end{equation}
+
+Remark: a unit-length vector $\widetilde {\vec a}_k$ does not imply \emph{normlized} for PCA anymore.
+
+\pause
+
+\notesonly{
 Scaling $\widetilde {\vec a}_k$ by $\frac{1}{\sqrt{p \lambda_k}}$ yields 
-a unit vector with the same direction as $\widetilde {\vec a}_k$ to satisfy Eq.\ref{eq:eignorm}.\\
+a vector in the same direction as $\widetilde {\vec a}_k$ to satisfy \notesonly{Eq.\ref{eq:eignorm}}\slidesonly{$\vec e^{\top}_k \vec e_k \eqexcl 1$}.\\
+}
 With
+\svspace{-5mm}
 \begin{equation}
 \vec a_k^{norm.} := \frac{1}{\sqrt{p \lambda_k}} \widetilde {\vec a}_k,
 \end{equation}
 follows:
+\svspace{-5mm}
 \begin{align}
 \vec e^{\top}_k \vec e_k 
 &= p \lambda_k \, \; \widetilde {\vec a}_k^\top \; \widetilde {\vec a}_k\\
@@ -408,14 +659,25 @@ follows:
 = 1
 \end{align}
 
+\end{frame}
 
-\newpage
+\subsubsection{Sorting}
 
-\item Sort the eigenvectors such that the corresponding eigenvalues are arranged in decreasing order. 
+\begin{frame}{\subsubsecname}
 
+Sort the eigenvectors such that the corresponding eigenvalues are arranged in decreasing order. 
 
-\item Projection:
+\slidesonly{
+\begin{center}
+		\includegraphics[width=4cm]{img/meme_sort}
+\end{center}
+}
 
+\end{frame}
+
+\subsubsection{Projection}
+
+\begin{frame}{\subsubsecname}
 In order to project some observation $\vec x$ into the PC space, we first map it into the non-linear space of $\phi$ 
 and then project that into the space spanned by the PCs. 
 By now we should expect that the transformation can only be performed via the kernel trick. 
@@ -445,10 +707,14 @@ u_k(\vec \phi_{(\vec x)}) &= \sum^{p}_{\beta=1} a^{(\beta)}
 \end{align}
 
 Note that $\vec x$ can be a sample that was used in computing the PCs or a completly new ``test'' point.
+\end{frame}
 
-\item Reconstruction:
+\subsubsection{Reconstruction}
+
+\begin{frame}{\subsubsecname}
 
 Since we never had the transformation $\phi$ to begin with. 
 It is not psssible to simply project a sample from PC space back into the original $N$-dimensional input space. 
 Algorithms exist that approximate a ``pre-image'' of some new observation.
-\end{enumerate}
+
+\end{frame}
