--- a/notes/03_kernel-pca/5_apply.tex
+++ b/notes/03_kernel-pca/5_apply.tex
@@ -10,6 +10,11 @@
 	\includegraphics[height=5cm]{img/contourplot_kpca_rbf}
 	\captionof{figure}{Projections onto individual PCs}
 \end{center}
+\svspace{-0.8cm}
+\begin{center}
+	\includegraphics[height=3.2cm]{img/screeplot_kpca_rbf.pdf}
+	\captionof{figure}{Scree plot}
+\end{center}
 
 \end{frame}
 
