--- a/notes/03_kernel-pca/3_kpca.tex
+++ b/notes/03_kernel-pca/3_kpca.tex
@@ -153,7 +153,7 @@ a^{(\alpha)}
 \label{eq:ephi}
 \vec e = \sum^{p}_{\beta=1} a^{(\beta)} 
 %\vec{\phi}_{(\vec{x}^{(\beta)})}
-\vec{\phi}^{(\alpha)}
+\vec{\phi}^{(\beta)}
 \end{equation}
 
 \notesonly{
@@ -267,7 +267,7 @@ We now proceed with reformulating the above until we no longer have any $\phi$'s
 
 \pause
 
-\notesonly{We }left-multiply\notesonly{ Eq.\ref{eq:eig3}} with $\big(\vec \phi_{(\vec x^{(\gamma)}}\big)^\top$, where $\gamma = 1, \ldots, p$.
+\notesonly{We }left-multiply\notesonly{ Eq.\ref{eq:eig3}} with $\big(\vec \phi_{(\vec x^{(\gamma)})}\big)^\top$, where $\gamma = 1, \ldots, p$.
  We can pull $\big(\vec \phi^{(\gamma)}\big)^\top$ directly into the sum on the \slidesonly{LHS}\notesonly{left-hand-side} and the sum on the \slidesonly{RHS}\notesonly{right-hand-side}:
 
 \only<2,3>{
