--- a/notes/03_kernel-pca/5_apply.tex
+++ b/notes/03_kernel-pca/5_apply.tex
@@ -2,18 +2,20 @@
 
 \subsection{Applying Kernel PCA}
 
-\begin{frame}{\subsecname}
+\begin{frame}{How do I interpret the role of PCs?}
 
-\question{How do I interpret the role of PCs?}
+\notesonly{\question{How do I interpret the role of PCs?}}
+
+\svspace{-7mm}
 
 \begin{center}
 	\includegraphics[height=5cm]{img/contourplot_kpca_rbf}
-	\captionof{figure}{Projections onto individual PCs}
+	\notesonly{\captionof{figure}{Projections onto individual PCs}}
 \end{center}
 \svspace{-0.8cm}
 \begin{center}
 	\includegraphics[height=3.2cm]{img/screeplot_kpca_rbf.pdf}
-	\captionof{figure}{Scree plot}
+	\notesonly{\captionof{figure}{Scree plot}}
 \end{center}
 
 \end{frame}
