fix layout and use of subsection

--- a/notes/02_online-pca/2_apply-online-pca.tex
+++ b/notes/02_online-pca/2_apply-online-pca.tex
@@ -44,13 +44,13 @@ Can also be done using ``standard'' or ``batch'' PCA.
 }
 }
 
+\notesonly{- Yes by using the \emph{Anti-Hebbian rule}}
+
 \end{frame}
 
-\subsubsecname{Novelty Filter with normalization}
+\subsubsection{Novelty Filter with normalization}
 
 \begin{frame}\frametitle{\subsubsecname}
-
-\notesonly{- Yes by using the}
 
 	\begin{block}{Anti-Hebbian rule:}
 				\begin{equation}
