split into files

--- a/notes/04_density-transform/tutorial.tex
+++ b/notes/04_density-transform/tutorial.tex
@@ -62,7 +62,25 @@
 \newpage
 
 \mode<all>
-\input{./1_density-transform}
+\input{./0_ica_problem}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./1_prng}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./2_cdf}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./3_density-transform}
 \mode*
 
 \clearpage
