--- a/notes/04_density-transform/3_density-transform.tex
+++ b/notes/04_density-transform/3_density-transform.tex
@@ -1,115 +1,4 @@
-
-\section{The ICA problem:}
-
-Let $\vec s = (s_1, s_2,...,s_N)^\top$ denote the concatenation of independent sources 
-and $\vec x \in \R^N$ describe our observations. $\vec x$ relates to $\vec s$ through a 
-\emph{linear transformation} $\vec A$:
-
-\begin{equation}
-\label{eq:ica}
-\vec x = \vec A \, \vec s.
-\end{equation}
-
-We refer to $\vec A$ as the \emph{mixing matrix} and Eq.\ref{eq:ica} as the \emph{ICA problem}, 
-which is recovering $\vec s$ from only observing $\vec x$.
-
-\underline{Example scenario:}
-
-Two speakers are placed in a room and emit signals $s_1$ and $s_2$. 
-The speakers operate indepdendent of one another.  
-Two microphones are placed in the room and start recording. 
-The first microphone is placed slightly closer to speaker 2, while 
-the second microphone is placed slightly closer to speaker 1.
-$x_1$ and $x_2$ denote the recordings of the first and second microphone respectively. 
-When we listen to the recordings we expect to hear a mix of $s_1$ and $s_2$. 
-Since microphone 1 was placed closer to speaker 2, when we only listen to $x_1$ we hear more of $s_2$ than $s_1$. 
-The opposite can be said when we listen only to $x_2$.
-
-Acoustic systems are linear. This means that $x_1$ is a superposition of \emph{both} sources $s_1$ and $s_2$. 
-We will assume here that the contribution of a source $s_i$ 
-to an observation $x_j$ is inversely proportional to the distance between the source and the microphone. 
-The distance-contribution relationship is \emph{linear}. We don't need this to be any more realistic. 
-
-If we had a measurement of the distance between each microphone and each speaker, 
-we would tell exactly what the contribution of each of $s_1$ and $s_2$ is to each recorded observation. 
-If we know the exact contribution of a source to an observation, we can look at both observations and recover each source in full.
-
-This is what ICA tries to solve, except that it does not have any knowledge about the spatial setting. It is blind.
-
-\underline{Outline:}
-
-Before we tackle ICA itself, we first look at the more basic principle of \emph{density transformation} and 
-the \emph{convservation of probability}.\\
-We start with more specific cases of applying density transformations, 
-namely \emph{pseudo random number generators} and what the inverse of \emph{cumulative distribution functions (cdf)} can be used for.\\
-Finally we discuss how to generalize this in order to transform one probability density function (pdf) into another.
-
-\subsection{PRNG:}
-
-How can we sample from the uniform distribution $\in \lbrack0, 1)$?
-
-\begin{itemize}
-\item Create a sequence, preferrably with a wrong period.
-\item minimal pattern and sub-subsequences
-\item determinism has an advantage:
-\begin{enumerate}
-	\item \emph{reproducible} sequneces
-	\item efficiency; the starting element or ``seed'' and length of the sequence is suffcient is representative of the entire sequnece.
-\end{enumerate}
-\end{itemize}
-
-\underline{Linear congruential generator (LCG):}
-
-Start with a seed $y_0 \in \overbrace{\left\{0,\ldots,m-1\right\}}^{=:\;\mathcal{M}}$ with $m \in \N$ ($m$ controls the granularity). 
-The next sample $y_t$ is computed as:
-
-\begin{equation}
-y_t = \left( \, a \; y_{t-1} \; + \; b \, \right) \, \text{mod} \; m,
-\end{equation}
-where\\[-0.7cm]
-\begin{align*}
-a \in \mathcal{M}&\; \text{is the multiplier,} \\
-b \in \mathcal{M}&\; \text{is the increment.}
-\end{align*}
-
-Then $u_i = \frac{y_i}{m} \approx \,\mathcal{U} \in \lbrack0, 1)$.
-
-Although finicky and requiring careful parameterization, LCG gives us something for drawing from a uniform distribution. 
-Next, we look at how to draw samples of a random variable $X$ with a desired pdf $p_X(x)$. 
-using uniformly sampled values $\tilde z \in [0,1]$.
-
-\subsection{Inverse CDF:}
-
-If $F_{X}(x)$ is the cumulative
-  distribution function (cdf) of a random variable $X$, then the
-random variable $Z = F_{X}(X)$ is uniformly distributed on the
-interval $[0,1]$. This result provides 
-% (after inverting the relationship) 
-a general recipe to generate
-samples $\tilde x$ of a random variable $X$ with a desired pdf $p_X(x)$
-from uniformly distributed random numbers $\tilde z \in [0,1]$:
-\begin{enumerate}
-\item Compute the cdf $F_X(x)$ of the desired pdf $p_X(x)$
-
-\begin{equation}
-F_X(x) = P(X \leq x) = \int_{-\infty}^{x} p(y)\,dy
-\end{equation}
-
-The cdf is a one-to-one mapping of the domain of the cdf to the interval $[0,1]$.
- If $Z$ is a uniform random variable, then $X=F_X^{-1}(Z)$ has the distribution $F$.
-
-\item Determine the inverse transformation $F^{-1}$.
-
-\item Sample uniformly distributed numbers (in $[0,1]$), $\tilde z$.
-\item Get the samples $\tilde x=F^{-1}(\tilde z)$ from $X$. 
-\end{enumerate}
-
-At this point we can use a PRNG to sample from the uniform distribution and 
-by plugging those samples into the inverse cdf we can obtain samples from a desired pdf.
-
-\newpage
-
-\section{Density Transformation:}
+\section{Density Transformation and Conservation of Probability}
 
 Let $X_1$ and $X_2$ be jointly continuous random variables with 
 density function $f_{X_1, X_2}$:
