--- a/notes/04_density-transform/3_density-transform.tex
+++ b/notes/04_density-transform/3_density-transform.tex
@@ -1,4 +1,4 @@
-\section{Density Transformation and Conservation of Probability}
+\subsection{Density Transformation and Conservation of Probability}
 
 Let $X_1$ and $X_2$ be jointly continuous random variables with 
 density function $f_{X_1, X_2}$:
