--- a/notes/04_density-transform/1_prng.tex
+++ b/notes/04_density-transform/1_prng.tex
@@ -8,7 +8,7 @@ We start with more specific cases of applying density transformations,
 namely \emph{pseudo random number generators} and what the inverse of \emph{cumulative distribution functions (cdf)} can be used for.\\
 Finally we discuss how to generalize this in order to transform one probability density function (pdf) into another.
 
-\subsection{PRNG:}
+\subsection{PRNG}
 
 How can we sample from the uniform distribution $\in \lbrack0, 1)$?
 
