--- a/notes/04_density-transform/2_cdf.tex
+++ b/notes/04_density-transform/2_cdf.tex
@@ -1,4 +1,4 @@
-\subsection{Inverse CDF:}
+\subsection{Inverse CDF}
 
 If $F_{X}(x)$ is the cumulative
   distribution function (cdf) of a random variable $X$, then the
