prng and inverse cdf

--- a/notes/04_density-transform/0_ica_problem.tex
+++ b/notes/04_density-transform/0_ica_problem.tex
@@ -9,11 +9,12 @@ and $\vec x \in \R^N$ describe our observations. $\vec x$ relates to $\vec s$ th
 
 \begin{equation}
 \label{eq:ica}
-\vec x = \vec A \, \vec s.
+\vec x = \vec A \, \vec s
+\slidesonly{\hspace{3cm}\text{the ICA problem}\hspace{-4cm}}
 \end{equation}
 
-We refer to $\vec A$ as the \emph{mixing matrix} and Eq.\ref{eq:ica} as the \emph{ICA problem}, 
-which is recovering $\vec s$ from only observing $\vec x$.
+We refer to $\vec A$ as the \emph{mixing matrix}\notesonly{ and Eq.\ref{eq:ica} as the \emph{ICA problem}}.
+Solving the ICA problems is to recover $\vec s$ from only observing $\vec x$.
 
 \end{frame}
 
