--- a/notes/04_density-transform/0_ica_problem.tex
+++ b/notes/04_density-transform/0_ica_problem.tex
@@ -30,7 +30,7 @@ Solving the ICA problems is to recover $\vec s$ from only observing $\vec x$.
 \notesonly{
 
 Two speakers are placed in a room and emit signals $s_1$ and $s_2$. 
-The speakers operate indepdendent of one another.  
+The speakers operate independent of one another.  
 Two microphones are placed in the room and start recording. 
 The first microphone is placed slightly closer to speaker 2, while 
 the second microphone is placed slightly closer to speaker 1.
