--- a/notes/04_density-transform/3_density-transform.tex
+++ b/notes/04_density-transform/3_density-transform.tex
@@ -158,7 +158,7 @@ We first only consider the vector due to ${\color{blue}dx_1}$:
 
 \pause
 
-The difference vector\notesonly{ between the two correspsonding points} in $u(\Omega)$ becomes:
+The difference vector\notesonly{ between the two corresponding points} in $u(\Omega)$ becomes:
 
 \begin{equation}
 \begin{array}{r}
@@ -253,7 +253,7 @@ u: {\color{red}\vec e_2} \mapsto
 
 \end{frame}
 
-\begin{frame}{Computing the area of the paralellogram}
+\begin{frame}{Computing the area of the parallelogram}
 
 \svspace{-5mm}
 
@@ -305,7 +305,7 @@ $$
 
 \end{frame}
 
-\begin{frame}{Computing the area of the paralellogram}
+\begin{frame}{Computing the area of the parallelogram}
 
 \svspace{-3mm}
 
