--- a/notes/03_kernel-pca/1_nonlin.tex
+++ b/notes/03_kernel-pca/1_nonlin.tex
@@ -55,7 +55,7 @@ We could perform PCA on the transformed data $\vec \phi_{(\vec x)}$.\\
 \notesonly{The reasoning behind this is that }non-linear correlations between variables in $\vec x$ could be linear between variables in $\vec \phi_{(\vec x)}$.
 
 \notesonly{
-This is the \underline{purpose} of the non-linear transformaiton. That, two or more components in the original $\vec x$ (e.g. $x_1$, $x_2$) could have non-linear correlations (e.g. plotting those two components reveals a parabola). 
+This is the \underline{purpose} of the non-linear transformation. That, two or more components in the original $\vec x$ (e.g. $x_1$, $x_2$) could have non-linear correlations (e.g. plotting those two components reveals a parabola). 
 Expanding the dimensionality of $\vec x$ through the above mapping introduces new dimensions in which correlations between the components in $\vec \phi_{(\vec x)}$ become \emph{linear}.
 
 }
@@ -104,6 +104,6 @@ The upside:\\
 We actually don't need to define this transformation.
 All we need to know is that the dimensionality of $\vec{\phi}_{(\vec{x})}$ can be larger than $N$, possibly infinitely large.\\
 
-We turn to the ``kernel trick'' to solve this problem and avoid an epxlicit definition for the non-linear transformation.
+We turn to the ``kernel trick'' to solve this problem and avoid an explicit definition for the non-linear transformation.
 
 \end{frame}
