--- a/notes/04_density-transform/0_ica_problem.tex
+++ b/notes/04_density-transform/0_ica_problem.tex
@@ -10,7 +10,7 @@ and $\vec x \in \R^N$ describe our observations. $\vec x$ relates to $\vec s$ th
 \begin{equation}
 \label{eq:ica}
 \vec x = \vec A \, \vec s
-\slidesonly{\hspace{3cm}\text{the ICA problem}\hspace{-4cm}}
+\slidesonly{\hspace{3cm}\text{(the ICA problem)}\hspace{-4cm}}
 \end{equation}
 
 We refer to $\vec A$ as the \emph{mixing matrix}\notesonly{ and Eq.\ref{eq:ica} as the \emph{ICA problem}}.
@@ -24,7 +24,7 @@ Solving the ICA problems is to recover $\vec s$ from only observing $\vec x$.
 
 \begin{center}
 	\includegraphics[width=0.7\textwidth]{img/setting}
-	\captionof{figure}{Example scenario}
+\notesonly{	\captionof{figure}{Example scenario} }
 \end{center}
 
 \notesonly{
