--- a/notes/05_infomax/tutorial.tex
+++ b/notes/05_infomax/tutorial.tex
@@ -62,10 +62,38 @@
 \newpage
 
 \mode<all>
-\input{./1_infomax}
+\input{./0_ica_intro}
 \mode*
 
 \clearpage
+
+
+\mode<all>
+\input{./1_primer_info_theory}
+\mode*
+
+\clearpage
+
+
+\mode<all>
+\input{./2_infomax}
+\mode*
+
+\clearpage
+
+
+\mode<all>
+\input{./3_cost}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./4_gradient}
+\mode*
+
+\clearpage
+
 
 %\section{References}
 %\begin{frame}[allowframebreaks] \frametitle{References}
